started dockerization and containifying

--- a/lcars-ultra-classic.html
+++ b/lcars-ultra-classic.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="date=no">
-	<link rel="stylesheet" type="text/css" href="assets/lcars-ultra-classic.css">
-	<link rel="stylesheet" type="text/css" href="assets/lcars-colors.css">
-	<script src="assets/jquery-3.6.3.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="public/assets/lcars-ultra-classic.css">
+	<link rel="stylesheet" type="text/css" href="public/assets/lcars-colors.css">
+	<script src="public/assets/jquery-3.6.3.min.js"></script>
 </head>
 
 <body>
@@ -152,7 +152,7 @@
 			</div>
 		</section>
 	</div>
-	<script type="text/javascript" src="assets/lcars.js"></script>
+	<script type="text/javascript" src="public/assets/lcars.js"></script>
 </body>
 
 </html>
